<resources>
    <string name="app_name">Business Informatics journal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="journal">Journal</string>
    <string name="collegium">Editorial Board</string>
    <string name="release">Release</string>
    <string name="prev_releases">Previous releases</string>
    <string name="for_authors">Authors guidelines</string>
    <string name="reviews">Peer reviewing</string>
    <string name="ethics">Publication ethics</string>
    <string name="subscription">Subscription</string>
    <string name="contacts">Contacts</string>
    <string name="for_authors_text">Articles should be topical and original, should outline tasks (issues), describe key results of the author’s research and appropriate conclusions.\n\nManuscripts are submitted via e-mail: bijournal@hse.ru.\n\nThe editors do not enter into discussions with the authors of rejected materials.\n\n\n<b>Manuscript requirements</b>\n\n<b>Text files</b> should be submitted in electronic form, as a MS Word document (version 2003 or higher).\n\n<b>Length. </b>Articles should be between 20 and 25 thousand characters (incl. spaces).\n\n<b>Font, spacing, margins.</b> The text should be in Times New Roman 12 pt, 1.5 spaced, fit to the width, margins: left – 25 mm, all other – 15 mm.\n\n<b>All the papers</b> should be submitted in English and/or in Russian. The accepted papers are published in the printed version of the journal in English, and in the electronic version – both in English and Russian (if necessary, translation is arranged by the journal).\n\n<b>Title</b> of the article should be submitted in native language and English.\n\n<b>Authors’ details</b> are presented in native language and English. The details include:\n    \u25CF  Full name of each author\n    \u25CF  Position, rank, academic degree of each author\n    \u25CF  Affiliation of each author, at the time the research was completed\n    \u25CF  Full postal address of each affiliation (incl. postcode / ZIP)\n    \u25CF  E-mail address of each author.\n\n<b>Abstract</b> are presented in native language and English.\n    \u25CF  The abstract should be between 200 and 300 words.\n    \u25CF  The abstract should be informative (no general words), original, relevant (reflects your paper’s key content and research findings); structured (follows the logics of results’ presentation in the paper)\n    \u25CF  The recommended structure: purpose (mandatory), design / methodology / approach (mandatory), findings (mandatory), research limitations / implications (if applicable), practical implications (if applicable), originality / value (mandatory).\n    \u25CF  It is appropriate to describe the research methods/methodology if they are original or of interest for this particular research. For papers concerned with experimental work the data sources and data procession technique should be described.\n    \u25CF  The results should be described as precisely and informatively as possible. Include your key theoretical and experimental results, factual information, revealed interconnections and patterns. Give special priority in the abstract to new results and long-term impact data, important discoveries and verified findings that contradict previous theories as well as data that you think have practical value.\n    \u25CF  Conclusions may be associated with recommendations, estimates, suggestions, hypotheses described in the paper.\n    \u25CF  Information contained in the title should not be duplicated in the abstract. Authors should try to avoid unnecessary introductory phrases (e.g. “the author of the paper considers…”).\n    \u25CF  Authors should use the language typical of research and technical documents to compile your abstract and avoid complex grammatical constructions.\n    \u25CF  The text of the abstract should include key words of the paper.\n\n\n<b>Keywords</b> are presented in native language and English. The number of key words / words combinations are from 6 to 10 (separated by semicolons).\n\n<b>Formulae</b> should be prepared using MS Equation tool.\n\n<b>Figures</b> should be of high quality, legible and numbered consecutively with Arabic numerals. All figures (charts, diagrams, etc.) should be submitted in electronic form (photo images – in TIF or JPEG formats, minimum resolution 300 dpi). Appropriate references in the text are required.\n\n<b>References</b> should be presented in Harvard style and carefully checked for completeness, accuracy and consistency.\n\n<b>The publication is free of charge.</b></string>
    <string name="more_info_about_collegium"><u>More about editorial board</u></string>
    <string name="reviewing_text">All the papers submitted for publication in «Business Informatics» journal are subject to reviewing and approval by the Editorial Board.\n\nThe manuscript submitted to the editors is subject to initial review and verification for compliance to the topics of the journal and formal editorial requirements. If the paper doesn’t comply with the subject-matter or formal requirements of the journal it excludes from further consideration, the author is notified about it.\n\nIf the paper is compliant with the topics and formal requirements is assigned for reviewing to an expert – a member of the Editorial Board (internal review). The paper can also be submitted for evaluation by an independent expert (external review).\n\nThe review process is anonymous both for the referee and for the author. The review results are provided by the referee in written form. The review should include general evaluation of the paper’s content and principal judgment on whether it could be published in the journal, specific enumeration of errors in the methodology and tools (if any), as well as recommendations for improving of the text.\n\nAccording to the reviewing results the paper may be accepted for publication, sent to the author for revision, or rejected.\n\nUpon receipt of a positive conclusion of the referee the paper is placed in the journal’s portfolio for further publication. Executive secretary of the Editorial Board informs the author about the acceptance of the paper. The final decision on the publication of the paper and approval of the total contents of the journal’s issue are adopted at a meeting of the editorial board.\n\nThe procedure for review and approval of papers is from one to two months, then articles are published in order of priority. The Editorial Board may decide on an extraordinary publication of the paper.\n\nUpon receipt of a negative conclusion of the reviewer the paper is discussed on the meeting of the Editorial Board working group, which makes a decision on rejection of the article or the need for further review by an independent expert. In case of paper’s rejection, an appropriate notification is sent to the author.\n\nPreparing an article for publication undertaken by the editors includes normal literary editing and fine-tuning of the text according to the internal editorial standards adopted for the journal. All the changes made by the editors are to be coordinated with the author.</string>
    <string name="reviewing_title"><b>Peer reviewing</b></string>
    <string name="glav_redaktor_title"><b>Editor-in-Chief: Alexey Golosov</b></string>
    <string name="glav_redaktor_text">President of FORS Development Center, Russian Federation.  </string>
    <string name="zam_glav_redaktora_title"><b>Deputy Editor-in-Сhief</b></string>
    <string name="zam_glav_redaktora_text"><b>Svetlana Maltseva</b> – Professor, Head of Department of Innovation and Business in Information Technologies, National Research University Higher School of Economics, Russian Federation.\n\n<b>Yevgeni Koucheryavy</b> – Professor of Department of Electronics and Communication Engineering, Tampere University of Technology, Finland.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contacts_address_title">Address:</string>
    <string name="contacts_address">33/5, Kirpichnaya str., Moscow, 105187, Russian Federation.</string>
    <string name="contacts_phone_title">Tel./fax:</string>
    <string name="contacts_phone">+7 (495) 771&#8211;32&#8211;38</string>
    <string name="contacts_site_title">Website:</string>
    <string name="contacts_site">http://bi.hse.ru/</string>
    <string name="contacts_email_title">E-mail:</string>
    <string name="contacts_email">bijournal@hse.ru</string>
    <string name="bi_magazine_title">Scientific journal\nBusiness Informatics</string>
    <string name="glav_redaktor_title1">Editor-in-Chief:\n Alexey Golosov</string>
    <string name="main_page_text">Business Informatics is a peer reviewed interdisciplinary academic journal published since 2007 by National Research University – Higher School of Economics (HSE), Moscow, Russian Federation. The journal is administered by the School of Business Informatics. The journal is issued quarterly; each paper is published in two languages – English and Russian.\n\nThe mission of the journal is to develop business informatics as a new field within both information technologies and management. It provides dissemination of latest technical and methodological developments, promotes new competences and provides a framework for discussion in the field of application of modern IT solutions in business, management and economics.</string>
    <string name="prev_release">Current release:</string>
    <string name="read">Read</string>
    <string name="subscription_title">Subscription</string>
    <string name="author_demands"><u>Authors guidelines</u></string>
    <string name="ethics_title">Publication ethics</string>
    <string name="switch_lang">English version</string>
</resources>