<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ContactsFragment">

    <ImageView
        android:id="@+id/contacts_map"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitStart"
        android:src="@drawable/contacts_map"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="18dp"
        app:layout_constraintTop_toBottomOf="@id/contacts_map">

        <TextView
            android:id="@+id/contacts_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contacts"
            android:textColor="@color/text_color_111111"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/contacts_title">

            <TableRow>

                <TextView
                    android:id="@+id/address_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="40dp"
                    android:text="@string/contacts_address_title"
                    android:textColor="@color/text_color_2e2e2e"
                    android:textSize="14sp"
                    app:layout_constraintLeft_toLeftOf="@id/contacts_title"
                    app:layout_constraintTop_toBottomOf="@id/contacts_title" />

                <TextView
                    android:id="@+id/address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contacts_address"
                    android:textColor="@color/text_color_3f3f3f"
                    android:textSize="14sp"
                    app:layout_constraintLeft_toRightOf="@id/address_title"
                    app:layout_constraintTop_toTopOf="@id/address_title" />
            </TableRow>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="12dp"
                android:background="#ededed" />

            <TableRow>

                <TextView
                    android:id="@+id/phone_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contacts_phone_title"
                    android:textColor="@color/text_color_2e2e2e"
                    android:textSize="14sp"
                    app:layout_constraintLeft_toLeftOf="@id/contacts_title"
                    app:layout_constraintTop_toBottomOf="@id/address_title" />

                <TextView
                    android:id="@+id/phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contacts_phone"
                    android:textColor="@color/text_color_3f3f3f"
                    android:textSize="14sp"
                    app:layout_constraintLeft_toRightOf="@id/phone_title"
                    app:layout_constraintTop_toTopOf="@id/phone_title" />
            </TableRow>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="12dp"
                android:background="#ededed" />

            <TableRow>

                <TextView
                    android:id="@+id/site_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contacts_site_title"
                    android:textColor="@color/text_color_2e2e2e"
                    android:textSize="14sp"
                    app:layout_constraintLeft_toLeftOf="@id/contacts_title"
                    app:layout_constraintTop_toBottomOf="@id/phone_title" />

                <TextView
                    android:id="@+id/site"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contacts_site"
                    android:textColor="@color/text_color_3f3f3f"
                    android:textSize="14sp"
                    android:autoLink="web"
                    app:layout_constraintLeft_toRightOf="@id/site_title"
                    app:layout_constraintTop_toTopOf="@id/site_title" />
            </TableRow>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="12dp"
                android:background="#ededed" />

            <TableRow>

                <TextView
                    android:id="@+id/email_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contacts_email_title"
                    android:textColor="@color/text_color_2e2e2e"
                    android:textSize="14sp"
                    app:layout_constraintLeft_toLeftOf="@id/contacts_title"
                    app:layout_constraintTop_toBottomOf="@id/site_title" />


                <TextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contacts_email"
                    android:textColor="@color/text_color_3f3f3f"
                    android:textSize="14sp"
                    android:autoLink="email"
                    app:layout_constraintLeft_toRightOf="@id/email_title"
                    app:layout_constraintTop_toTopOf="@id/email_title" />
            </TableRow>
        </TableLayout>
    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>