<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CollegiumFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/collegium_glavred"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="18dp"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/collegium_glavred_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web|email"
                android:text="@string/glav_redaktor_title"
                android:textColor="@color/text_color_161616"
                android:textSize="16sp"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/collegium_glavred_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:autoLink="web|email"
                android:text="@string/glav_redaktor_text"
                android:textColor="@color/text_color_333333"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/collegium_glavred_title" />

        </android.support.constraint.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#babbbc"
            app:layout_constraintTop_toBottomOf="@id/collegium_glavred" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/collegium_zamred"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@id/collegium_glavred">

            <TextView
                android:id="@+id/collegium_zamred_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web|email"
                android:text="@string/zam_glav_redaktora_title"
                android:textColor="@color/text_color_161616"
                android:textSize="16sp"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/collegium_zamred_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:autoLink="web|email"
                android:text="@string/zam_glav_redaktora_text"
                android:textColor="@color/text_color_333333"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/collegium_zamred_title" />

            <TextView
                android:id="@+id/more_about_collegium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:autoLink="web|email"
                android:text="@string/more_info_about_collegium"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/collegium_zamred_content" />

        </android.support.constraint.ConstraintLayout>
    </android.support.constraint.ConstraintLayout>
</ScrollView>