<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="18dp">

            <ImageView
                android:id="@+id/bi_image"
                android:layout_width="132dp"
                android:layout_height="172dp"
                android:adjustViewBounds="true"
                android:background="@drawable/image_border"
                android:src="@drawable/bi" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/bi_magazine_title"
                android:textColor="@color/text_color_0e0e0e"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toRightOf="@id/bi_image"
                app:layout_constraintTop_toTopOf="@id/bi_image" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="84dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/glav_redaktor_title1"
                android:textColor="@color/text_color_2f2f2f"
                android:textSize="14sp"
                app:layout_constraintLeft_toRightOf="@id/bi_image"
                app:layout_constraintTop_toTopOf="@id/bi_image" />

            <TextView
                android:id="@+id/main_page_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="80dp"
                android:layout_marginTop="16dp"
                android:text="@string/main_page_text"
                android:textColor="@color/text_color_1a1a1a"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/bi_image" />

            <!--<View-->
            <!--android:id="@+id/main_line"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="0.5dp"-->
            <!--android:layout_marginTop="12dp"-->
            <!--android:background="#ededed"-->
            <!--app:layout_constraintTop_toBottomOf="@id/main_page_text" />-->


        </android.support.constraint.ConstraintLayout>

    </ScrollView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:elevation="14dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <View
            android:id="@+id/main_line"
            android:layout_width="match_parent"
            android:layout_height="0.8dp"
            android:background="#ededed"
            app:layout_constraintTop_toBottomOf="@id/main_page_text" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="18dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/prev_release"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/prev_release"
                android:textColor="@color/text_color_1a1a1a"
                android:textSize="14sp" />

            <ProgressBar
                android:id="@+id/journal_progress"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:indeterminate="true"
                app:layout_constraintEnd_toEndOf="@id/prev_release"
                app:layout_constraintStart_toStartOf="@id/prev_release"
                app:layout_constraintTop_toBottomOf="@id/prev_release" />

            <TextView
                android:id="@+id/journal_last_release_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:textColor="@color/text_color_1a1a1a"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@id/prev_release"
                app:layout_constraintTop_toBottomOf="@id/prev_release" />

            <Button
                android:id="@+id/journal_read"
                android:layout_width="145dp"
                android:layout_height="33dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/button_shape"
                android:text="@string/read"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>